# Engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
cmake/: IDE.cmake  Platform.cmake  compiler.cmake
core/: CMakeLists.txt
core/include/: Application.hpp  Assert.hpp  Camera.hpp  Color.hpp  Common.hpp  Components.hpp  Delegate.hpp  Engine.hpp  Entity.hpp  EntryPoint.hpp  Framebuffer.hpp  GPUBuffers.hpp  GPUBuffersGL.hpp  Image.hpp  InputMap.hpp  Logger.hpp  MathFunctions.hpp  RenderDevice.hpp  RenderDeviceGL.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  Shader.hpp  ShaderGL.hpp  Signal.hpp  Texture.hpp  TextureGL.hpp  Timer.hpp  Transform.hpp  Vector2.hpp  Window.hpp  WindowGLFW.hpp
core/src/: Application.cpp  Assert.cpp  Camera.cpp  Color.cpp  Entity.cpp  GPUBuffers.cpp  GPUBuffersGL.cpp  Logger.cpp  RenderDevice.cpp  RenderDeviceGL.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  ShaderGL.cpp  Texture.cpp  TextureGL.cpp  Transform.cpp  Window.cpp  WindowGLFW.cpp
sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.hpp
shaders/: CircleShader.glsl  QuadShader.glsl
